--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta http-equiv="refresh" content="0; url=http://www.pulserain.com/#!github/c1ka7" />
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>GitHub Page for PulseRain Technology</h1>
+<p>PulseRain Technology, GitHub Page</p>
 </body>
 </html>
