add title and change content a little bit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>PulseRain Technology, GitHub Page</title>
 <meta http-equiv="refresh" content="0; url=http://www.pulserain.com/#!github/c1ka7" />
 </head>
 <body>
 <h1>GitHub Page for PulseRain Technology</h1>
-<p>PulseRain Technology, GitHub Page</p>
 </body>
 </html>
