--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <meta http-equiv="refresh" content="0; url=http://www.pulserain.com/#!github/c1ka7" />
 </head>
 <body>
-<h1>GitHub Page for PulseRain Technology</h1>
+<h1>Redirecting...</h1>
 </body>
 </html>
