add one more link if not redirected automatically

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>Redirecting...</h1>
+<span>Click <a href="http://www.pulserain.com/#!github/c1ka7">here</a> if not redirected automatically</span>
 </body>
 </html>
