change link to open source

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PulseRain Technology, GitHub Page</title>
-<meta http-equiv="refresh" content="0; url=http://www.pulserain.com/#!github/c1ka7" />
+<title>PulseRain Technology, Open Source</title>
+<meta http-equiv="refresh" content="0; url=http://www.pulserain.com/#!opensource/c1ka7" />
 </head>
 <body>
 <h1>Redirecting...</h1>
-<span>Click <a href="http://www.pulserain.com/#!github/c1ka7">here</a> if not redirected automatically</span>
+<span>Click <a href="http://www.pulserain.com/#!opensource/c1ka7">here</a> if not redirected automatically</span>
 </body>
 </html>
